# adventofcode

./: README.md  main.py  pyproject.toml
day1/: day1.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py
day8/: day8.py
day9/: day9.py
